# swagger.json
@@ -8,7 +8,7 @@
       "email": "hungpt2@relipasoft.com"
     }
   },
-  "host": "sheltered-badlands-02083.herokuapp.com",
+  "host": "localhost:8888",
   "basePath": "/v1",
   "tags": [
     {
@@ -165,7 +165,17 @@
         "tags": ["Store Management"],
         "summary": "API Endpoint for Create Store",
         "description": "Create Store",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "store",
+            "description": "Store params to create new store",
+            "in": "body",
+            "required": "true",
+            "schema": {
+              "$ref": "#definitions/Store"
+            }
+          }
+        ],
         "produces": ["application/json"],
         "responses": {
           "200": {
@@ -316,6 +326,23 @@
         },
         "password": {
           "type": "string"
+        }
+      }
+    },
+    "Store": {
+      "required": ["name", "description"],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "image": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
